projects/boxes/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> BOXES
Rule 1     BOXES -> BOX OC before_vars VARS seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
Rule 2     BOXES -> BOX OC before_vars VARS seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC
Rule 3     before_vars -> <empty>
Rule 4     seen_globalvars -> <empty>
Rule 5     seen_methods -> <empty>
Rule 6     VARS -> VARI VARS
Rule 7     VARS -> VARF VARS
Rule 8     VARS -> VARST VARS
Rule 9     VARS -> <empty>
Rule 10    VARF -> VARFSMALL VARF3 PC
Rule 11    VARF3 -> IDV EQUALS FLOAT COMMA VARF3
Rule 12    VARF3 -> IDV EQUALS FLOAT
Rule 13    VARF3 -> IDV VAR_ARRAY COMMA VARF3
Rule 14    VARF3 -> IDV VAR_ARRAY
Rule 15    VAR_ARRAY -> OB seen_ARRAY_LIMIT CB VAR_ARRAY
Rule 16    VAR_ARRAY -> <empty>
Rule 17    seen_ARRAY_LIMIT -> INT
Rule 18    VARI -> VARISMALL VARI3 PC
Rule 19    VARI3 -> IDV EQUALS INT COMMA VARI3
Rule 20    VARI3 -> IDV EQUALS INT
Rule 21    VARI3 -> IDV VAR_ARRAY COMMA VARI3
Rule 22    VARI3 -> IDV VAR_ARRAY
Rule 23    VARST -> VARSTSMALL VARST3 PC
Rule 24    VARST3 -> IDV EQUALS STRING COMMA VARST3
Rule 25    VARST3 -> IDV EQUALS STRING
Rule 26    VARST3 -> IDV VAR_ARRAY COMMA VARST3
Rule 27    VARST3 -> IDV VAR_ARRAY
Rule 28    BLOCKS -> OC VARS BLOCKS2 CC
Rule 29    BLOCKS -> OC VARS CC
Rule 30    BLOCKS -> OC BLOCKS2 CC
Rule 31    BLOCKS -> OC CC
Rule 32    BLOCKS2 -> CODE
Rule 33    BLOCKS2 -> CODE BLOCKS2
Rule 34    CODE -> RETURN
Rule 35    CODE -> ASSIGNATION
Rule 36    CODE -> LOOP
Rule 37    CODE -> LOOPIF
Rule 38    CODE -> CONDITION
Rule 39    CODE -> ASK
Rule 40    CODE -> SAY
Rule 41    CODE -> CALLBOX PC
Rule 42    CONDITION -> IF OP STM CP OC seen_OC_IF BLOCKS2 CC CONDITION2
Rule 43    CONDITION -> IF OP STM CP OC seen_OC_IF CC CONDITION2
Rule 44    CONDITION -> IF OP STM CP OC seen_OC_IF BLOCKS2 CC seen_CC_IF
Rule 45    CONDITION -> IF OP STM CP OC seen_OC_IF CC seen_CC_IF
Rule 46    seen_OC_IF -> <empty>
Rule 47    seen_CC_IF -> <empty>
Rule 48    CONDITION2 -> ELSE seen_ELSE OC CONDITION3
Rule 49    CONDITION3 -> BLOCKS2 CC seen_CC_ELSE
Rule 50    CONDITION3 -> CC seen_CC_ELSE
Rule 51    seen_ELSE -> <empty>
Rule 52    seen_CC_ELSE -> <empty>
Rule 53    STM -> EXPRESSION STM2 EXPRESSION seen_STM
Rule 54    STM -> EXPRESSION
Rule 55    STM2 -> GT
Rule 56    STM2 -> GTE
Rule 57    STM2 -> LT
Rule 58    STM2 -> LTE
Rule 59    STM2 -> DOUBLEEQUALS
Rule 60    STM2 -> LTGT
Rule 61    seen_STM -> <empty>
Rule 62    PARAM -> PARAM2 IDV
Rule 63    PARAM2 -> VARISMALL
Rule 64    PARAM2 -> VARSTSMALL
Rule 65    PARAM2 -> VARFSMALL
Rule 66    METHODS -> METHODS2 seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE
Rule 67    METHODS -> METHODS2 seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE METHODS
Rule 68    METHOD_UPDATE -> <empty>
Rule 69    seen_IDM -> IDM
Rule 70    METHODS2 -> RECURSIVEBOX
Rule 71    METHODS2 -> VOIDBOX
Rule 72    METHODS2 -> VARIBOX
Rule 73    METHODS2 -> VARFBOX
Rule 74    METHODS2 -> VARSBOX
Rule 75    METHODS3 -> PARAM COMMA METHODS3
Rule 76    METHODS3 -> PARAM
Rule 77    METHODS3 -> <empty>
Rule 78    RETURN -> RETURNW EXPRESSION PC
Rule 79    ASSIGNATION -> seen_ID_ASSIGNATION start_ARRAY seen_ARRAY_CTE end_ARRAY EQUALS EXPRESSION PC
Rule 80    ASSIGNATION -> seen_ID_ASSIGNATION EQUALS EXPRESSION PC
Rule 81    seen_ID_ASSIGNATION -> IDV
Rule 82    EXPRESSION -> OPER seen_EXPF
Rule 83    EXPRESSION -> OPER seen_EXPF seen_OPER EXPRESSION
Rule 84    seen_EXPF -> <empty>
Rule 85    seen_OPER -> PLUS
Rule 86    seen_OPER -> MINUS
Rule 87    seen_OPER -> OR
Rule 88    OPER -> TERM seen_TERMF
Rule 89    OPER -> TERM seen_TERMF seen_TERM OPER
Rule 90    seen_TERMF -> <empty>
Rule 91    seen_TERM -> MULTIPLY
Rule 92    seen_TERM -> DIVISION
Rule 93    seen_TERM -> AND
Rule 94    TERM -> OP seen_OP_TERM STM CP
Rule 95    TERM -> CTE
Rule 96    seen_OP_TERM -> <empty>
Rule 97    CTE -> INT seen_INT
Rule 98    CTE -> FLOAT seen_FLOAT
Rule 99    CTE -> STRING seen_STRING
Rule 100   CTE -> CALLBOX seen_CALLBOX
Rule 101   CTE -> seen_ID
Rule 102   CTE -> seen_ID start_ARRAY seen_ARRAY_CTE end_ARRAY
Rule 103   seen_CALLBOX -> <empty>
Rule 104   seen_INT -> <empty>
Rule 105   seen_FLOAT -> <empty>
Rule 106   seen_STRING -> <empty>
Rule 107   seen_ID -> IDV
Rule 108   seen_ARRAY_CTE -> OB EXPRESSION seen_EXPRESSION_ARRAY CB seen_ARRAY_CTE
Rule 109   seen_ARRAY_CTE -> OB EXPRESSION seen_EXPRESSION_ARRAY CB
Rule 110   start_ARRAY -> <empty>
Rule 111   end_ARRAY -> <empty>
Rule 112   seen_EXPRESSION_ARRAY -> <empty>
Rule 113   SAY -> SAYW OP CONCAT CP PC
Rule 114   CONCAT -> EXPRESSION seen_EXP_SAY DOT CONCAT
Rule 115   CONCAT -> EXPRESSION seen_EXP_SAY
Rule 116   seen_EXP_SAY -> <empty>
Rule 117   ASK -> ASKUSER OP STRING COMMA IDV CP PC
Rule 118   CALLBOX -> CALLBOXW OP SEEN_IDM_CALL COMMA SEEN_CALL PARAMETERS CP
Rule 119   CALLBOX -> CALLBOXW OP SEEN_IDM_CALL CP
Rule 120   SEEN_IDM_CALL -> IDM
Rule 121   SEEN_CALL -> <empty>
Rule 122   PARAMETERS -> SEEN_EXPRESSION_PARAM COMMA PARAMETERS
Rule 123   PARAMETERS -> SEEN_EXPRESSION_PARAM
Rule 124   SEEN_EXPRESSION_PARAM -> EXPRESSION
Rule 125   LOOP -> LOOPW seen_LOOP OP seen_VAR_LOOP FROM LOOP2 TO LOOP2 BY LOOP2 CP seen_CP_LOOP1 OC BLOCKS2 CC
Rule 126   LOOP -> LOOPW seen_LOOP OP seen_VAR_LOOP FROM LOOP2 TO LOOP2 CP seen_CP_LOOP2 OC BLOCKS2 CC
Rule 127   LOOP -> LOOPW seen_LOOP OP seen_VAR_LOOP FROM LOOP2 TO LOOP2 BY LOOP2 CP seen_CP_LOOP1 OC CC
Rule 128   LOOP -> LOOPW seen_LOOP OP seen_VAR_LOOP FROM LOOP2 TO LOOP2 CP seen_CP_LOOP2 OC CC
Rule 129   seen_CP_LOOP1 -> <empty>
Rule 130   seen_CP_LOOP2 -> <empty>
Rule 131   seen_VAR_LOOP -> IDV
Rule 132   LOOP2 -> seen_INT_LOOP
Rule 133   LOOP2 -> seen_FLOAT_LOOP
Rule 134   seen_INT_LOOP -> INT
Rule 135   seen_FLOAT_LOOP -> FLOAT
Rule 136   seen_LOOP -> <empty>
Rule 137   LOOPIF -> LOOPIFW seen_LOOPIF OP STM CP seen_CP_LOOPIF OC BLOCKS2 CC
Rule 138   LOOPIF -> LOOPIFW seen_LOOPIF OP STM CP seen_CP_LOOPIF OC CC
Rule 139   seen_LOOPIF -> <empty>
Rule 140   seen_CP_LOOPIF -> <empty>

Terminals, with rules where they appear

AND                  : 93
ASKUSER              : 117
BOX                  : 1 2
BY                   : 125 127
CALLBOXW             : 118 119
CB                   : 15 108 109
CC                   : 1 2 28 29 30 31 42 43 44 45 49 50 125 126 127 128 137 138
COMMA                : 11 13 19 21 24 26 75 117 118 122
CP                   : 1 2 42 43 44 45 66 67 94 113 117 118 119 125 126 127 128 137 138
DIVISION             : 92
DOT                  : 114
DOUBLEEQUALS         : 59
ELSE                 : 48
EQUALS               : 11 12 19 20 24 25 79 80
FLOAT                : 11 12 98 135
FROM                 : 125 126 127 128
GT                   : 55
GTE                  : 56
IDM                  : 69 120
IDV                  : 11 12 13 14 19 20 21 22 24 25 26 27 62 81 107 117 131
IF                   : 42 43 44 45
INT                  : 17 19 20 97 134
LOOPIFW              : 137 138
LOOPW                : 125 126 127 128
LT                   : 57
LTE                  : 58
LTGT                 : 60
MAINBOX              : 1 2
MINUS                : 86
MULTIPLY             : 91
OB                   : 15 108 109
OC                   : 1 2 28 29 30 31 42 43 44 45 48 125 126 127 128 137 138
OP                   : 1 2 42 43 44 45 66 67 94 113 117 118 119 125 126 127 128 137 138
OR                   : 87
PC                   : 10 18 23 41 78 79 80 113 117
PLUS                 : 85
RECURSIVEBOX         : 70
RETURNW              : 78
SAYW                 : 113
STRING               : 24 25 99 117
TO                   : 125 126 127 128
VARFBOX              : 73
VARFSMALL            : 10 65
VARIBOX              : 72
VARISMALL            : 18 63
VARSBOX              : 74
VARSTSMALL           : 23 64
VOIDBOX              : 71
error                : 

Nonterminals, with rules where they appear

ASK                  : 39
ASSIGNATION          : 35
BLOCKS               : 1 2 66 67
BLOCKS2              : 28 30 33 42 44 49 125 126 137
BOXES                : 0
CALLBOX              : 41 100
CODE                 : 32 33
CONCAT               : 113 114
CONDITION            : 38
CONDITION2           : 42 43
CONDITION3           : 48
CTE                  : 95
EXPRESSION           : 53 53 54 78 79 80 83 108 109 114 115 124
LOOP                 : 36
LOOP2                : 125 125 125 126 126 127 127 127 128 128
LOOPIF               : 37
METHODS              : 1 67
METHODS2             : 66 67
METHODS3             : 66 67 75
METHOD_UPDATE        : 66 67
OPER                 : 82 83 89
PARAM                : 75 76
PARAM2               : 62
PARAMETERS           : 118 122
RETURN               : 34
SAY                  : 40
SEEN_CALL            : 118
SEEN_EXPRESSION_PARAM : 122 123
SEEN_IDM_CALL        : 118 119
STM                  : 42 43 44 45 94 137 138
STM2                 : 53
TERM                 : 88 89
VARF                 : 7
VARF3                : 10 11 13
VARI                 : 6
VARI3                : 18 19 21
VARS                 : 1 2 6 7 8 28 29
VARST                : 8
VARST3               : 23 24 26
VAR_ARRAY            : 13 14 15 21 22 26 27
before_vars          : 1 2
end_ARRAY            : 79 102
seen_ARRAY_CTE       : 79 102 108
seen_ARRAY_LIMIT     : 15
seen_CALLBOX         : 100
seen_CC_ELSE         : 49 50
seen_CC_IF           : 44 45
seen_CP_LOOP1        : 125 127
seen_CP_LOOP2        : 126 128
seen_CP_LOOPIF       : 137 138
seen_ELSE            : 48
seen_EXPF            : 82 83
seen_EXPRESSION_ARRAY : 108 109
seen_EXP_SAY         : 114 115
seen_FLOAT           : 98
seen_FLOAT_LOOP      : 133
seen_ID              : 101 102
seen_IDM             : 66 67
seen_ID_ASSIGNATION  : 79 80
seen_INT             : 97
seen_INT_LOOP        : 132
seen_LOOP            : 125 126 127 128
seen_LOOPIF          : 137 138
seen_OC_IF           : 42 43 44 45
seen_OPER            : 83
seen_OP_TERM         : 94
seen_STM             : 53
seen_STRING          : 99
seen_TERM            : 89
seen_TERMF           : 88 89
seen_VAR_LOOP        : 125 126 127 128
seen_globalvars      : 1 2
seen_methods         : 1 2
start_ARRAY          : 79 102

Parsing method: LALR

state 0

    (0) S' -> . BOXES
    (1) BOXES -> . BOX OC before_vars VARS seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> . BOX OC before_vars VARS seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC

    BOX             shift and go to state 1

    BOXES                          shift and go to state 2

state 1

    (1) BOXES -> BOX . OC before_vars VARS seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> BOX . OC before_vars VARS seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC

    OC              shift and go to state 3


state 2

    (0) S' -> BOXES .



state 3

    (1) BOXES -> BOX OC . before_vars VARS seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> BOX OC . before_vars VARS seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC
    (3) before_vars -> .

    VARISMALL       reduce using rule 3 (before_vars -> .)
    VARFSMALL       reduce using rule 3 (before_vars -> .)
    VARSTSMALL      reduce using rule 3 (before_vars -> .)
    RECURSIVEBOX    reduce using rule 3 (before_vars -> .)
    VOIDBOX         reduce using rule 3 (before_vars -> .)
    VARIBOX         reduce using rule 3 (before_vars -> .)
    VARFBOX         reduce using rule 3 (before_vars -> .)
    VARSBOX         reduce using rule 3 (before_vars -> .)
    MAINBOX         reduce using rule 3 (before_vars -> .)

    before_vars                    shift and go to state 4

state 4

    (1) BOXES -> BOX OC before_vars . VARS seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> BOX OC before_vars . VARS seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC
    (6) VARS -> . VARI VARS
    (7) VARS -> . VARF VARS
    (8) VARS -> . VARST VARS
    (9) VARS -> .
    (18) VARI -> . VARISMALL VARI3 PC
    (10) VARF -> . VARFSMALL VARF3 PC
    (23) VARST -> . VARSTSMALL VARST3 PC

    RECURSIVEBOX    reduce using rule 9 (VARS -> .)
    VOIDBOX         reduce using rule 9 (VARS -> .)
    VARIBOX         reduce using rule 9 (VARS -> .)
    VARFBOX         reduce using rule 9 (VARS -> .)
    VARSBOX         reduce using rule 9 (VARS -> .)
    MAINBOX         reduce using rule 9 (VARS -> .)
    VARISMALL       shift and go to state 10
    VARFSMALL       shift and go to state 11
    VARSTSMALL      shift and go to state 8

    VARS                           shift and go to state 5
    VARF                           shift and go to state 6
    VARST                          shift and go to state 9
    VARI                           shift and go to state 7

state 5

    (1) BOXES -> BOX OC before_vars VARS . seen_globalvars METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> BOX OC before_vars VARS . seen_globalvars seen_methods MAINBOX OP CP BLOCKS CC
    (4) seen_globalvars -> .

    RECURSIVEBOX    reduce using rule 4 (seen_globalvars -> .)
    VOIDBOX         reduce using rule 4 (seen_globalvars -> .)
    VARIBOX         reduce using rule 4 (seen_globalvars -> .)
    VARFBOX         reduce using rule 4 (seen_globalvars -> .)
    VARSBOX         reduce using rule 4 (seen_globalvars -> .)
    MAINBOX         reduce using rule 4 (seen_globalvars -> .)

    seen_globalvars                shift and go to state 12

state 6

    (7) VARS -> VARF . VARS
    (6) VARS -> . VARI VARS
    (7) VARS -> . VARF VARS
    (8) VARS -> . VARST VARS
    (9) VARS -> .
    (18) VARI -> . VARISMALL VARI3 PC
    (10) VARF -> . VARFSMALL VARF3 PC
    (23) VARST -> . VARSTSMALL VARST3 PC

    RECURSIVEBOX    reduce using rule 9 (VARS -> .)
    VOIDBOX         reduce using rule 9 (VARS -> .)
    VARIBOX         reduce using rule 9 (VARS -> .)
    VARFBOX         reduce using rule 9 (VARS -> .)
    VARSBOX         reduce using rule 9 (VARS -> .)
    MAINBOX         reduce using rule 9 (VARS -> .)
    CC              reduce using rule 9 (VARS -> .)
    RETURNW         reduce using rule 9 (VARS -> .)
    LOOPW           reduce using rule 9 (VARS -> .)
    LOOPIFW         reduce using rule 9 (VARS -> .)
    IF              reduce using rule 9 (VARS -> .)
    ASKUSER         reduce using rule 9 (VARS -> .)
    SAYW            reduce using rule 9 (VARS -> .)
    CALLBOXW        reduce using rule 9 (VARS -> .)
    IDV             reduce using rule 9 (VARS -> .)
    VARISMALL       shift and go to state 10
    VARFSMALL       shift and go to state 11
    VARSTSMALL      shift and go to state 8

    VARS                           shift and go to state 13
    VARF                           shift and go to state 6
    VARST                          shift and go to state 9
    VARI                           shift and go to state 7

state 7

    (6) VARS -> VARI . VARS
    (6) VARS -> . VARI VARS
    (7) VARS -> . VARF VARS
    (8) VARS -> . VARST VARS
    (9) VARS -> .
    (18) VARI -> . VARISMALL VARI3 PC
    (10) VARF -> . VARFSMALL VARF3 PC
    (23) VARST -> . VARSTSMALL VARST3 PC

    RECURSIVEBOX    reduce using rule 9 (VARS -> .)
    VOIDBOX         reduce using rule 9 (VARS -> .)
    VARIBOX         reduce using rule 9 (VARS -> .)
    VARFBOX         reduce using rule 9 (VARS -> .)
    VARSBOX         reduce using rule 9 (VARS -> .)
    MAINBOX         reduce using rule 9 (VARS -> .)
    CC              reduce using rule 9 (VARS -> .)
    RETURNW         reduce using rule 9 (VARS -> .)
    LOOPW           reduce using rule 9 (VARS -> .)
    LOOPIFW         reduce using rule 9 (VARS -> .)
    IF              reduce using rule 9 (VARS -> .)
    ASKUSER         reduce using rule 9 (VARS -> .)
    SAYW            reduce using rule 9 (VARS -> .)
    CALLBOXW        reduce using rule 9 (VARS -> .)
    IDV             reduce using rule 9 (VARS -> .)
    VARISMALL       shift and go to state 10
    VARFSMALL       shift and go to state 11
    VARSTSMALL      shift and go to state 8

    VARS                           shift and go to state 14
    VARF                           shift and go to state 6
    VARST                          shift and go to state 9
    VARI                           shift and go to state 7

state 8

    (23) VARST -> VARSTSMALL . VARST3 PC
    (24) VARST3 -> . IDV EQUALS STRING COMMA VARST3
    (25) VARST3 -> . IDV EQUALS STRING
    (26) VARST3 -> . IDV VAR_ARRAY COMMA VARST3
    (27) VARST3 -> . IDV VAR_ARRAY

    IDV             shift and go to state 16

    VARST3                         shift and go to state 15

state 9

    (8) VARS -> VARST . VARS
    (6) VARS -> . VARI VARS
    (7) VARS -> . VARF VARS
    (8) VARS -> . VARST VARS
    (9) VARS -> .
    (18) VARI -> . VARISMALL VARI3 PC
    (10) VARF -> . VARFSMALL VARF3 PC
    (23) VARST -> . VARSTSMALL VARST3 PC

    RECURSIVEBOX    reduce using rule 9 (VARS -> .)
    VOIDBOX         reduce using rule 9 (VARS -> .)
    VARIBOX         reduce using rule 9 (VARS -> .)
    VARFBOX         reduce using rule 9 (VARS -> .)
    VARSBOX         reduce using rule 9 (VARS -> .)
    MAINBOX         reduce using rule 9 (VARS -> .)
    CC              reduce using rule 9 (VARS -> .)
    RETURNW         reduce using rule 9 (VARS -> .)
    LOOPW           reduce using rule 9 (VARS -> .)
    LOOPIFW         reduce using rule 9 (VARS -> .)
    IF              reduce using rule 9 (VARS -> .)
    ASKUSER         reduce using rule 9 (VARS -> .)
    SAYW            reduce using rule 9 (VARS -> .)
    CALLBOXW        reduce using rule 9 (VARS -> .)
    IDV             reduce using rule 9 (VARS -> .)
    VARISMALL       shift and go to state 10
    VARFSMALL       shift and go to state 11
    VARSTSMALL      shift and go to state 8

    VARS                           shift and go to state 17
    VARF                           shift and go to state 6
    VARST                          shift and go to state 9
    VARI                           shift and go to state 7

state 10

    (18) VARI -> VARISMALL . VARI3 PC
    (19) VARI3 -> . IDV EQUALS INT COMMA VARI3
    (20) VARI3 -> . IDV EQUALS INT
    (21) VARI3 -> . IDV VAR_ARRAY COMMA VARI3
    (22) VARI3 -> . IDV VAR_ARRAY

    IDV             shift and go to state 18

    VARI3                          shift and go to state 19

state 11

    (10) VARF -> VARFSMALL . VARF3 PC
    (11) VARF3 -> . IDV EQUALS FLOAT COMMA VARF3
    (12) VARF3 -> . IDV EQUALS FLOAT
    (13) VARF3 -> . IDV VAR_ARRAY COMMA VARF3
    (14) VARF3 -> . IDV VAR_ARRAY

    IDV             shift and go to state 20

    VARF3                          shift and go to state 21

state 12

    (1) BOXES -> BOX OC before_vars VARS seen_globalvars . METHODS seen_methods MAINBOX OP CP BLOCKS CC
    (2) BOXES -> BOX OC before_vars VARS seen_globalvars . seen_methods MAINBOX OP CP BLOCKS CC
    (66) METHODS -> . METHODS2 seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE
    (67) METHODS -> . METHODS2 seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE METHODS
    (5) seen_methods -> .
    (70) METHODS2 -> . RECURSIVEBOX
    (71) METHODS2 -> . VOIDBOX
    (72) METHODS2 -> . VARIBOX
    (73) METHODS2 -> . VARFBOX
    (74) METHODS2 -> . VARSBOX

    MAINBOX         reduce using rule 5 (seen_methods -> .)
    RECURSIVEBOX    shift and go to state 22
    VOIDBOX         shift and go to state 28
    VARIBOX         shift and go to state 27
    VARFBOX         shift and go to state 25
    VARSBOX         shift and go to state 26

    seen_methods                   shift and go to state 24
    METHODS2                       shift and go to state 29
    METHODS                        shift and go to state 23

state 13

    (7) VARS -> VARF VARS .

    RECURSIVEBOX    reduce using rule 7 (VARS -> VARF VARS .)
    VOIDBOX         reduce using rule 7 (VARS -> VARF VARS .)
    VARIBOX         reduce using rule 7 (VARS -> VARF VARS .)
    VARFBOX         reduce using rule 7 (VARS -> VARF VARS .)
    VARSBOX         reduce using rule 7 (VARS -> VARF VARS .)
    MAINBOX         reduce using rule 7 (VARS -> VARF VARS .)
    CC              reduce using rule 7 (VARS -> VARF VARS .)
    RETURNW         reduce using rule 7 (VARS -> VARF VARS .)
    LOOPW           reduce using rule 7 (VARS -> VARF VARS .)
    LOOPIFW         reduce using rule 7 (VARS -> VARF VARS .)
    IF              reduce using rule 7 (VARS -> VARF VARS .)
    ASKUSER         reduce using rule 7 (VARS -> VARF VARS .)
    SAYW            reduce using rule 7 (VARS -> VARF VARS .)
    CALLBOXW        reduce using rule 7 (VARS -> VARF VARS .)
    IDV             reduce using rule 7 (VARS -> VARF VARS .)


state 14

    (6) VARS -> VARI VARS .

    RECURSIVEBOX    reduce using rule 6 (VARS -> VARI VARS .)
    VOIDBOX         reduce using rule 6 (VARS -> VARI VARS .)
    VARIBOX         reduce using rule 6 (VARS -> VARI VARS .)
    VARFBOX         reduce using rule 6 (VARS -> VARI VARS .)
    VARSBOX         reduce using rule 6 (VARS -> VARI VARS .)
    MAINBOX         reduce using rule 6 (VARS -> VARI VARS .)
    CC              reduce using rule 6 (VARS -> VARI VARS .)
    RETURNW         reduce using rule 6 (VARS -> VARI VARS .)
    LOOPW           reduce using rule 6 (VARS -> VARI VARS .)
    LOOPIFW         reduce using rule 6 (VARS -> VARI VARS .)
    IF              reduce using rule 6 (VARS -> VARI VARS .)
    ASKUSER         reduce using rule 6 (VARS -> VARI VARS .)
    SAYW            reduce using rule 6 (VARS -> VARI VARS .)
    CALLBOXW        reduce using rule 6 (VARS -> VARI VARS .)
    IDV             reduce using rule 6 (VARS -> VARI VARS .)


state 15

    (23) VARST -> VARSTSMALL VARST3 . PC

    PC              shift and go to state 30


state 16

    (24) VARST3 -> IDV . EQUALS STRING COMMA VARST3
    (25) VARST3 -> IDV . EQUALS STRING
    (26) VARST3 -> IDV . VAR_ARRAY COMMA VARST3
    (27) VARST3 -> IDV . VAR_ARRAY
    (15) VAR_ARRAY -> . OB seen_ARRAY_LIMIT CB VAR_ARRAY
    (16) VAR_ARRAY -> .

    EQUALS          shift and go to state 31
    OB              shift and go to state 32
    COMMA           reduce using rule 16 (VAR_ARRAY -> .)
    PC              reduce using rule 16 (VAR_ARRAY -> .)

    VAR_ARRAY                      shift and go to state 33

state 17

    (8) VARS -> VARST VARS .

    RECURSIVEBOX    reduce using rule 8 (VARS -> VARST VARS .)
    VOIDBOX         reduce using rule 8 (VARS -> VARST VARS .)
    VARIBOX         reduce using rule 8 (VARS -> VARST VARS .)
    VARFBOX         reduce using rule 8 (VARS -> VARST VARS .)
    VARSBOX         reduce using rule 8 (VARS -> VARST VARS .)
    MAINBOX         reduce using rule 8 (VARS -> VARST VARS .)
    CC              reduce using rule 8 (VARS -> VARST VARS .)
    RETURNW         reduce using rule 8 (VARS -> VARST VARS .)
    LOOPW           reduce using rule 8 (VARS -> VARST VARS .)
    LOOPIFW         reduce using rule 8 (VARS -> VARST VARS .)
    IF              reduce using rule 8 (VARS -> VARST VARS .)
    ASKUSER         reduce using rule 8 (VARS -> VARST VARS .)
    SAYW            reduce using rule 8 (VARS -> VARST VARS .)
    CALLBOXW        reduce using rule 8 (VARS -> VARST VARS .)
    IDV             reduce using rule 8 (VARS -> VARST VARS .)


state 18

    (19) VARI3 -> IDV . EQUALS INT COMMA VARI3
    (20) VARI3 -> IDV . EQUALS INT
    (21) VARI3 -> IDV . VAR_ARRAY COMMA VARI3
    (22) VARI3 -> IDV . VAR_ARRAY
    (15) VAR_ARRAY -> . OB seen_ARRAY_LIMIT CB VAR_ARRAY
    (16) VAR_ARRAY -> .

    EQUALS          shift and go to state 34
    OB              shift and go to state 32
    COMMA           reduce using rule 16 (VAR_ARRAY -> .)
    PC              reduce using rule 16 (VAR_ARRAY -> .)

    VAR_ARRAY                      shift and go to state 35

state 19

    (18) VARI -> VARISMALL VARI3 . PC

    PC              shift and go to state 36


state 20

    (11) VARF3 -> IDV . EQUALS FLOAT COMMA VARF3
    (12) VARF3 -> IDV . EQUALS FLOAT
    (13) VARF3 -> IDV . VAR_ARRAY COMMA VARF3
    (14) VARF3 -> IDV . VAR_ARRAY
    (15) VAR_ARRAY -> . OB seen_ARRAY_LIMIT CB VAR_ARRAY
    (16) VAR_ARRAY -> .

    EQUALS          shift and go to state 37
    OB              shift and go to state 32
    COMMA           reduce using rule 16 (VAR_ARRAY -> .)
    PC              reduce using rule 16 (VAR_ARRAY -> .)

    VAR_ARRAY                      shift and go to state 38

state 21

    (10) VARF -> VARFSMALL VARF3 . PC

    PC              shift and go to state 39


state 22

    (70) METHODS2 -> RECURSIVEBOX .

    IDM             reduce using rule 70 (METHODS2 -> RECURSIVEBOX .)


state 23

    (1) BOXES -> BOX OC before_vars VARS seen_globalvars METHODS . seen_methods MAINBOX OP CP BLOCKS CC
    (5) seen_methods -> .

    MAINBOX         reduce using rule 5 (seen_methods -> .)

    seen_methods                   shift and go to state 40

state 24

    (2) BOXES -> BOX OC before_vars VARS seen_globalvars seen_methods . MAINBOX OP CP BLOCKS CC

    MAINBOX         shift and go to state 41


state 25

    (73) METHODS2 -> VARFBOX .

    IDM             reduce using rule 73 (METHODS2 -> VARFBOX .)


state 26

    (74) METHODS2 -> VARSBOX .

    IDM             reduce using rule 74 (METHODS2 -> VARSBOX .)


state 27

    (72) METHODS2 -> VARIBOX .

    IDM             reduce using rule 72 (METHODS2 -> VARIBOX .)


state 28

    (71) METHODS2 -> VOIDBOX .

    IDM             reduce using rule 71 (METHODS2 -> VOIDBOX .)


state 29

    (66) METHODS -> METHODS2 . seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE
    (67) METHODS -> METHODS2 . seen_IDM OP METHODS3 CP BLOCKS METHOD_UPDATE METHODS
    (69) seen_IDM -> . IDM

    IDM             shift and go to state 43

    seen_IDM                       shift and go to state 42

state 30

    (23) VARST -> VARSTSMALL VARST3 PC .

    VARISMALL       reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VARFSMALL       reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VARSTSMALL      reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    RECURSIVEBOX    reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VOIDBOX         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VARIBOX         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VARFBOX         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    VARSBOX         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    MAINBOX         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    CC              reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    RETURNW         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    LOOPW           reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    LOOPIFW         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    IF              reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    ASKUSER         reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    SAYW            reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    CALLBOXW        reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)
    IDV             reduce using rule 23 (VARST -> VARSTSMALL VARST3 PC .)


state 31

    (24) VARST3 -> IDV EQUALS . STRING COMMA VARST3
    (25) VARST3 -> IDV EQUALS . STRING

    STRING          shift and go to state 44


state 32

    (15) VAR_ARRAY -> OB . seen_ARRAY_LIMIT CB VAR_ARRAY
    (17) seen_ARRAY_LIMIT -> . INT

    INT             shift and go to state 45

    seen_ARRAY_LIMIT               shift and go to state 46

state 33

    (26) VARST3 -> IDV VAR_ARRAY . COMMA VARST3
    (27) VARST3 -> IDV VAR_ARRAY .

    COMMA           shift and go to state 47
    PC              reduce using rule 27 (VARST3 -> IDV VAR_ARRAY .)


state 34
